update: corrected footer, header, main.scss, content wrap... merged to others

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -205,6 +205,11 @@ body.light .darkLogo {
 .darkLogo {
   display: flex;
   position: relative;
+  cursor: pointer;
+}
+
+.lightLogo {
+  cursor: pointer;
 }
 
 .lightLogo {
@@ -2071,7 +2076,7 @@ body.light .textStyles a {
   font-size: 15px;
   transition: 0.6s;
   cursor: pointer;
-  
+
   &:hover {
     color: $c-orange;
   }
